# hls-issue-repro

./: .gitignore  CHANGELOG.md  README.md  hls-issue-repro.cabal
data/: foo.json
src/: Bar.hs  Foo.hs  FooId.hs
src/Data/Aeson/: THReader.hs
