cabal-version:      2.4
name:               hls-issue-repro
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jakub Zalewski
maintainer:         jakzale@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md,
                    data/foo.json

library
    exposed-modules:  Data.Aeson.THReader,
                      Foo,
                      Bar

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      aeson,
                      template-haskell,
                      th-utilities,
                      deriving-aeson,
                      bytestring

    hs-source-dirs:   src
    default-language: Haskell2010

